Deepen copper driver with asymmetric slew parameters